hphp/hack/test/typecheck/refinements/constraint_based/split_shape_types.php.exp
ERROR: File "split_shape_types.php", line 32, characters 5-76:
hh_expect_equivalent type mismatch (Typing[4452])
  File "split_shape_types.php", line 32, characters 26-71:
  Expected `shape('x' => int, 'y' => string, 'z' => float)`
  File "split_shape_types.php", line 29, characters 13-56:
  But got `(shape('x' => int, 'y' => string, 'z' => num) & not shape('z' => int, 'y' => string, 'x' => int))` from this `is` expression test
ERROR: File "split_shape_types.php", line 32, characters 5-76:
hh_expect_equivalent type mismatch (Typing[4452])
  File "split_shape_types.php", line 32, characters 26-71:
  Expected `shape('x' => int, 'y' => string, 'z' => float)`
  File "split_shape_types.php", line 29, characters 13-56:
  But got `not shape('z' => int, 'y' => string, 'x' => int)` from this `is` expression test
ERROR: File "split_shape_types.php", line 32, characters 5-76:
hh_expect_equivalent type mismatch (Typing[4452])
  File "split_shape_types.php", line 32, characters 66-70:
  Expected `float`
  File "split_shape_types.php", line 27, characters 43-45:
  But got `int`
ERROR: File "split_shape_types.php", line 32, characters 74-75:
Invalid argument (Typing[4110])
  File "split_shape_types.php", line 32, characters 26-71:
  Expected `shape('x' => int, 'y' => string, 'z' => float)`
  File "hh_single_type_check_magic.hhi", line 5, characters 108-108:
    via this generic `T`
  File "split_shape_types.php", line 29, characters 13-56:
  But got `(shape('x' => int, 'y' => string, 'z' => num) & not shape('z' => int, 'y' => string, 'x' => int))` from this `is` expression test
ERROR: File "split_shape_types.php", line 32, characters 74-75:
Invalid argument (Typing[4110])
  File "split_shape_types.php", line 32, characters 26-71:
  Expected `shape('x' => int, 'y' => string, 'z' => float)`
  File "hh_single_type_check_magic.hhi", line 5, characters 108-108:
    via this generic `T`
  File "split_shape_types.php", line 29, characters 13-56:
  But got `not shape('z' => int, 'y' => string, 'x' => int)` from this `is` expression test
ERROR: File "split_shape_types.php", line 32, characters 74-75:
Invalid argument (Typing[4110])
  File "split_shape_types.php", line 32, characters 66-70:
  Expected `float`
  File "split_shape_types.php", line 27, characters 43-45:
  But got `num`
